# arachne

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  LICENSE  README.md  build.py  poetry.toml  pyproject.toml  pyproject_runtime.toml
.devcontainer/: devcontainer.json
.github/workflows/: arachne-test.yaml  format-check.yaml  pr_check_format.yaml  pr_test_arachne.yaml  push-docker-image.yaml  test.yaml  update_dockerhub_image.yaml
ci/: benchmark.sh  benchmark_coral.sh  benchmark_pipeline.py  benchmark_sub.sh  build_rpc_tracker.sh  evaluate.sh  test.sh
deploy/: tvm_rpc_tracker.yml
deploy/l4t/: tvm_rpc_server.yml
device/: install.sh  setup.sh
device/env/: pyproject.toml
device/jp45/: install.sh  pyproject.toml
device/jp46/: install.sh
device/raspi4/: install.sh  pyproject.toml
device/scripts/install/: install_common.sh  install_coral.sh  install_jetson.sh  install_kv260.sh  install_raspi4.sh  install_ultra96.sh  pyxir.patch
device/scripts/install/tvm_config/: coral_config.cmake  jetson_config.cmake  raspi4_config.cmake  zynq_config.cmake
device/scripts/setup/: setup_common.sh  setup_coral.sh  setup_jetson_nano.sh  setup_jetson_tx2.sh  setup_jetson_xavier_nx.sh  setup_kv260.sh  setup_raspi4.sh  setup_ultra96.sh
docker/: Dockerfile  Dockerfile.export_od_tf1  Dockerfile.export_od_tf2  Dockerfile.quantize  Dockerfile.tvm_rpc_tracker  Dockerfile.vitis_ai  base-gpu-jp4x.Dockerfile  devel-gpu.Dockerfile  run.sh  with_the_same_user.sh
docker/install/: install_bazel.sh  install_caffe.sh  install_core.sh  install_core_gpu.sh  install_cuda-10-2.sh  install_darknet.sh  install_devtools.sh  install_docker.sh  install_edgetpu.sh  install_llvm.sh  install_onnx.sh  install_opencv.sh  install_python.sh  install_python_package.sh  install_pyxir.sh  install_redis.sh  install_tensorflow.sh  install_tensorrt.sh  install_tflite.sh  install_torch.sh  install_tvm.sh  install_tvm_vai.sh  install_universal.sh  setup_tvm_config.sh
docker/jp/: README.md  devel-gpu-jp45.Dockerfile  devel-gpu-jp46.Dockerfile
docker/l4t/: Dockerfile.tvm_rpc_server
docs/: README.md  conf.py  index.rst  requirements.txt  yolox.rst
docs/api/: config.rst  data.rst  driver.rst  index.rst  pipeline.rst  tools.rst  utils.rst
docs/api/runtime/: index.rst  runtime.rst
docs/api/runtime/rpc/: index.rst  protobuf.rst  servicer.rst  utils.rst
docs/guides/: index.rst  tf2_od_api.rst  yolov4.rst  yolox.rst
docs/install/: index.rst
docs/tools/: tftrt.rst  tvm.rst
docs/tutorials/: index.rst  intro.rst  pipeline.rst  rpc.rst  run_pipeline.rst  run_runtime.rst  run_tool.rst  run_tool_api.rst  run_tool_cli.rst  runtime.rst  setup_device.rst
docs/tutorials/tools/: index.rst  onnx_tf.rst  openvino2tf.rst  openvino_mo.rst  tflite_converter.rst  tftrt.rst  torch2onnx.rst  torch2trt.rst  tvm.rst
examples/: README.md  compile_and_run_keras.ipynb  run_api.ipynb  run_cli.ipynb  run_exported_pkg.py  run_imported_pkg.py  run_multiple_pipelines.py  run_pipeline.ipynb  run_runtime.ipynb  run_tflite.py
examples/local/: README.md  inference.py
examples/rpc/: README.md  inference.py
examples/tools/: run_onnx_tf.ipynb  run_openvino2tf.ipynb  run_tflite_converter.ipynb  run_tftrt.ipynb  run_torch2onnx.ipynb  run_torch2trt.ipynb
python/: setup.py
python/arachne/: __init__.py  benchmark.py  common.py  compile.py  data.py  dataset.py  device.py  env.py  evaluate.py  ishape.py  logger.py  module.py  pipeline.py  registry.py  server.py  utils.py
python/arachne/config/: base.py
python/arachne/config/tvm_target/: dgx-1.yaml  jetson-nano.yaml  jetson-xavier-nx.yaml  rasp4b64.yaml
python/arachne/dataset/: __init__.py  coco.py  imagenet.py  tfds.py
python/arachne/driver/: cli.py  pipeline.py
python/arachne/pipeline/: pipeline.py  runner.py
python/arachne/pipeline/package/: __init__.py  caffe.py  darknet.py  frontend.py  keras.py  onnx.py  package.py  pytorch.py  tf1.py  tf2.py  tflite.py  torchscript.py  tvm.py  tvm_vm.py  tvmc_model.py
python/arachne/pipeline/stage/: _registry.py  registry.py  stage.py  utils.py
python/arachne/runtime/: __init__.py  common.py  module.py  qtype.py  session.py
python/arachne/runtime/module/: __init__.py  _registry.py  factory.py  module.py  onnx.py  registry.py  tflite.py  tvm.py
python/arachne/script/: compile_in_vitis_ai.py
python/arachne/tools/: __init__.py  factory.py  onnx_simplifier.py  onnx_tf.py  openvino2tf.py  openvino_mo.py  tflite_converter.py  tftrt.py  torch2onnx.py  torch2trt.py  tvm.py
python/arachne/types/: __init__.py  arachne_dataset.py  indexed_ordered_dict.py  registry.py  tensor_info.py
python/arachne/utils/: global_utils.py  model_utils.py  onnx_utils.py  tf_utils.py  torch_utils.py  version_utils.py
python/tests/: benchmark_test.py  benhcmark_test.py  compile_test.py
python/tests/pipeline/: package_test.py  runner_test.py
python/tests/runtime/: module_registry_test.py  module_test.py
scripts/: _docker_init.sh  docker_launch.sh  install_torch2trt.sh  install_tvm.sh
tests/: test_pipeline.py
tests/runtime/: test_multiple_client.py  test_onnx.py  test_rpc.py  test_rpc_benchmark.py  test_runtime.py  test_tflite.py  test_tvm_graph_executor.py
tests/runtime/rpc/: test_benchmark.py  test_multiple_client.py  test_run.py
tests/tools/: test_onnx_simplifier.py  test_onnx_tf.py  test_openvino2tf.py  test_tflite_converter.py  test_tftrt.py  test_torch2onnx.py  test_torch2trt.py  test_tvm.py
tutorial/: test_openvino2tf.ipynb
(+64 files in other folders)
