[tool.poetry]
name = "arachne"
version = "0.0.0"
description = "A library for accelerating deploying your DNN models to your edge devices."
authors = ["Takafumi Kubota <takafumi.kubota@fixstars.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.6.3,<3.9"
numpy = "1.19.4"
torch = "1.8.0"
torchvision = "0.9.0"
tensorflow-datasets = "^4.4.0"
hydra-core = "^1.1.1"
packaging = "^21.3"
openvino-dev = "^2021.4.2"
rawpy = "0.16.0"
kedro = "^0.17.6"
openvino2tensorflow = "^1.27.1"
onnxruntime-gpu = "1.6.0"
onnx = "1.6.0"
tensorflow = {url = "https://arachne-public-pkgs.s3.ap-northeast-1.amazonaws.com/pypi/tensorflow-2.5.2-cp36-cp36m-linux_x86_64.whl"}
tflite = {url = "https://arachne-public-pkgs.s3.ap-northeast-1.amazonaws.com/pypi/tflite-2.5.2-py3-none-any.whl"}
pyparsing = "2.4.7"

[tool.poetry.group.docs.dependencies]
sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.16.1"
sphinx-autobuild = "^2021.3.14"
autodocsumm = "^0.2.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.0"
flake8 = "^3.9.2"
black = "~20.8b1"
isort = "^5.10.1"
cmake = "^3.22.1"
ninja = "^1.10.2"
pytest-xdist = "^2.5.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py36']
include = '(\.pyi?$)'
exclude = '''

(
  /(
      \.github
    | \.git
    | \.vscode
    | 3rdparty
    | docker\/
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["python/arachne"]
filter_files = true
skip_glob = "*/3rdparty/**/*,*/docker/**/*,*/.vscode/**/*,*/.git/**/*,*/.github/**/*"

[tool.pyright]
ignore = ["./3rdparty/**/*", "./.venv/**/*", "./.git/**/*", "./build/**/*", "./tmp/**/*"]